--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "css-loader": "^6.10.0",
+    "style-loader": "^3.3.4"
   }
 }
