--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.1.0",
+    "next": "^15.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -18,10 +18,10 @@
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "autoprefixer": "^10.4.17",
+    "css-loader": "^6.11.0",
     "postcss": "^8.4.35",
+    "style-loader": "^3.3.4",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3",
-    "css-loader": "^6.10.0",
-    "style-loader": "^3.3.4"
+    "typescript": "^5.3.3"
   }
 }
